--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,12 @@ p {
     font-weight: 400;
 }
 
+header a {
+    text-decoration: none;
+    color: var(--color-tertiary);
+
+}
+
 .flex {
     display: flex;
 }
@@ -62,7 +68,6 @@ p {
 .header-page {
     font-size: 13px;
     height: 174px;
-    color: var(--color-tertiary);
 }
 
 .list-nav {
