--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,10 @@ p {
     margin: 0;
 }
 
+a:hover {
+    color: var(--color-neutro1);
+}
+
 header a {
     text-decoration: none;
     color: var(--color-tertiary);
