--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,8 +6,6 @@
     }
 
     .menu-toggle {
-        width: 30px;
-        height: 25px;
         cursor: pointer;
         border: none;
         background-color: rgba(0, 0, 0, 0);
@@ -111,7 +109,8 @@
     }
 
     .container-cards {
-        padding: 2rem 0 2rem 2rem;
+        padding: 4rem 0 2rem 2rem;
+        background-color: rgba(0, 0, 0, 0);
     }
 
     .text-card {
@@ -125,6 +124,7 @@
 
     .container-article {
         justify-content: center;
+        padding-top: 2rem;
     }
 
     #perfil-sanjo,
@@ -134,6 +134,7 @@
 
     .logo-social {
         flex-direction: column-reverse;
+        align-items: center;
     }
 
     footer {
@@ -146,11 +147,10 @@
         gap: 2rem;
     }
 
-    .align-section {
-        width: 100%;
-        align-items: center;
-        justify-content: space-around;
-        flex-direction: column-reverse;
+    .container3 {
+        padding: 2rem 1rem;
+        height: 100%;
+
     }
 
     form input:first-child {
@@ -162,7 +162,7 @@
     }
 
     .logo-footer {
-        padding: 2rem;
+        padding-top: 2rem;
     }
 
     .copyright-footer {
